--- a/Docker setup/excalibur-freeradius/Dockerfile
+++ b/Docker setup/excalibur-freeradius/Dockerfile
@@ -10,7 +10,8 @@ RUN 	apt install -y libwww-perl \
  libtry-tiny-perl \
  freeradius \
  libjson-perl \
- liblwp-protocol-https-perl
+ liblwp-protocol-https-perl \
+ htop
 
 
 RUN	sed -i "s|FREERADIUS_OPTIONS=\"\"|FREERADIUS_OPTIONS=\"-t\" |g" /etc/default/freeradius
@@ -28,7 +29,7 @@ COPY files/excalibur /etc/freeradius/sites-enabled/
 COPY files/excalibur-radius.pm /etc/freeradius/
 
 # Set URL to Excalibur auth API
-RUN	sed -i "s|URL = https://localhost/validate/check|URL = https://staging.xclbr.com/api/authorize \n TIMEOUT = 30 |g" /etc/freeradius/rlm_perl.ini
+RUN	sed -i "s|URL = https://localhost/validate/check|URL = https://staging.xclbr.com/api/pushka \n TIMEOUT = 30 |g" /etc/freeradius/rlm_perl.ini
 
 # Create entry for radius client
 RUN   	echo "client 172.18.0.2 { \n\tipaddr = 172.18.0.2 \n\tshortname = vpn \n\tsecret = testing123 \n}\n" >> /etc/freeradius/clients.conf
@@ -40,4 +41,6 @@ RUN	rm /etc/freeradius/sites-enabled/inner-tunnel
 # Restart freeradius service
 RUN 	service freeradius stop
 CMD 	freeradius -f
+
+
 
