*.pm file & *.ini file configured for new API

--- a/Docker setup/excalibur-freeradius/files/rlm_perl.ini
+++ b/Docker setup/excalibur-freeradius/files/rlm_perl.ini
@@ -1,5 +1,5 @@
 [Default]
-URL = https://staging.xclbr.com/api/authorize
+URL = https://staging.xclbr.com/api/pushka
 #REALM = someRealm
 #RESCONF = someResolver
 SSL_CHECK = false
